# fri3d-bulk-flasher

./: .gitignore  README.md  build-binary.sh  pyproject.toml  run.py
.github/workflows/: build.yml
bulk_flasher/: __init__.py  app.py  config.py  devices.py  firmware.py  flasher.py  tools.py
