[project]
name = "fri3d-bulk-flasher"
version = "0.1.4"
description = "Bulk firmware flasher TUI for Fri3d Camp 2026 devices (Badge, Communicator, DJ Addon)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "textual>=1.0",
    "esptool>=5.0",
    "pyserial>=3.5",
    "tomli>=2.0 ; python_version < '3.11'",
    # cryptography 46.0.3 is the last release with a win_arm64 wheel; newer
    # releases build from sdist, which needs Rust + OpenSSL that the
    # windows-11-arm CI runner doesn't have.
    "cryptography<=46.0.3 ; sys_platform == 'win32' and platform_machine == 'ARM64'",
    # <49 matches esptool 5.3.1's own cap on macOS x86_64, keeping esptool
    # from forking across platforms.
    "cryptography>=47,<49 ; sys_platform != 'win32' or platform_machine != 'ARM64'",
]

[dependency-groups]
dev = ["textual-dev>=1.0"]
build = ["pyinstaller>=6.10", "tomli>=2.0 ; python_version < '3.11'"]

[project.scripts]
fri3d-bulk-flasher = "bulk_flasher.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bulk_flasher"]
